image folder add

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
        <div class="container">
         <div class="headder">
           <div class="logo">
-
+              <img src="./" alt="">
           </div>
           <div class="search">
 
